# fastapi-test

./: .gitignore  AGENTS.md  Dockerfile  MANIFEST.in  README.md  catalog-info.yaml  docker-compose.yml  pyproject.toml  tox.ini
.github/workflows/: build-and-deploy.yml  build.yml  deploy.yaml
argocd/apps/: app-prod.yaml  app-qa.yaml
argocd/appsets/: appset-pr.yaml
argocd/argocd/: README.md
argocd/argocd/apps/: app-prod.yaml  app-qa.yaml
argocd/argocd/appsets/: appset-pr.yaml
charts/fast-api-test/: Chart.yaml  values-prod.yaml  values-qa.yaml  values.yaml
charts/fast-api-test/templates/: NOTES.txt  _helpers.tpl  authapplication.yaml  certificate.yaml  configmap.yaml  deployment.yaml  externalsecret-sm.yaml  externalsecret-ssm.yaml  hpa.yaml  ingress.yaml  pdb.yaml  rollout-canary.yaml  service.yaml  serviceaccount.yaml
src/fast_api_test/: __init__.py  main.py
src/settings/: __init__.py  base.py  local.py  prod.py
tests/: conftest.py  test_main.py
