[project]
name = "fast-api-test"
version = "0.0.1"
description = "This is a test for a FastAPI"
readme = "README.md"
requires-python = "==3.10.*"
dependencies = [
    "fastapi[standard]>=0.121.0",
    "starlette>=0.49.1",
    "pydantic-settings>=2.11.0",
]

[project.scripts]
app = "fast_api_test.main:app"

[tool.uv]
package = true

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"

[tool.ruff]
target-version = "py310"

[tool.bandit]
exclude_dirs = ["tests", ".tox"]

[dependency-groups]
dev = [
    "bandit>=1.7.0",
    "httpx>=0.28.1",
    "pre-commit>=2.9.2",
    "pytest>=8.3.2",
    "pytest-cov>=2.12.1",
    "ruff>=0.14.0",
    "safety>=2.3.4",
    "tox>=4.16.0",
    "tox-uv>=1.0.0",
    "uv>=0.9.6",
]
